monticore-generator/src/test/resources/cocos/invalid/A4047/A4047b.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4047;

grammar A4047b {
  
  interface A = C;
  
  abstract B implements A;
  
  C;
}
